security: removed vulnerable scripts

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -183,7 +183,7 @@
                             </li>
                             <li><a href="concentration.html" class="link-light rounded"><i class="bi bi-eyedropper"></i>
                                     Solution Concentration</a></li>
-                            <li><a href="inorganiccomp.html" class="link-light rounded"><i class="bi bi-water"></i>
+                            <!-- <li><a href="inorganiccomp.html" class="link-light rounded"><i class="bi bi-water"></i>
                                     Inorganic Compounds Calculator</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Carbon Combustions</p>
@@ -200,7 +200,7 @@
                             <li><a href="neutralization.html" class="link-light rounded"><i class="bi bi-droplet"></i>
                                     Neutralization Reaction Calculator</a></li>
                             <li><a href="acidmetalreaction.html" class="link-light rounded"><i class="bi bi-funnel"></i>
-                                    Acid-Metal Reaction Calculator</a></li>
+                                    Acid-Metal Reaction Calculator</a></li> -->
                         </ul>
                     </div>
                 </li>
